  matched.  It now only matches existing graphics-capable modes, and will
  construct one (effectively doing *NewMode 126 x y bpp 1 1) if no matches
  to existing modes are found.
- System: Emulated syscall OS_ReadModeVariable was incorrectly also returning
  VDU variables. Now only Mode variables are returned, attempts to get any
  other variable return 0, as they do on RISC OS.
- Graphics: Reading VDU variables for TINT was giving incorrect values.
- BASIC: Fixed a bug whereby the OSCLI command might have its parameter
  trampled on.
- BASIC: On non-RISC OS platforms, increase SYS parameters to 16 to support
  "Brandy_dlcall" calling symbols which take a lot of parameters.
- BASIC: Power was broken in the upper echelons of 64-bit ints, also conversion
  to ints was a bit broken for edge cases.
- BASIC: Evaluations now carried out internally with 80-bit floats (where 
  available), cast to 64-bit when returning values to BASIC.

* V1.22.10 - 14 February 2021
- System: *Refresh OnError wasn't working correctly. Fixed.
- System: Added a fix reducing the likelihood of where a textfile BASIC
  program could be misinterpreted as a tokenised one.
- System: Implemented enough of SYS "OS_File" to hopefully be useful.
- System: SDL graphics in its own thread. MODE 7 now runs like a startled cat.
  As a bonus, we now have a flashing cursor too. The performance tweak call
  SYS "Brandy_RefreshInterval" has been removed.
- System: MODE 7 is now fast enough that VDU 23,18,1 is a no-op.
- Graphics: New ellipse drawing code. Based on RISC OS ARM implementation,
  translated to C by hoglet@Stardot for PiTubeDirect.
- Graphics: Fix a crash where somehow PLOT generates negative offset values.
- BASIC: CLEAR now deallocates arrays (not memory blocks) allocated using
  DIM HIMEM.
- BASIC: CLEAR extended to allow CLEAR HIMEM [<array()>], which frees arrays
  (not memory blocks), but otherwise leaves variables untouched. Specifying